<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="12dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp"
                    android:elevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/img_item_photo"
                    app:layout_constraintStart_toStartOf="@+id/img_item_photo"
                    app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

                <TextView
                    android:id="@+id/following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_following"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_item_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

                <TextView
                    android:id="@+id/tv_item_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/following_text"
                    app:layout_constraintStart_toStartOf="@+id/following_text"
                    app:layout_constraintTop_toBottomOf="@+id/following_text" />

                <TextView
                    android:id="@+id/followers_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/user_followers"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/following_text"
                    app:layout_constraintTop_toTopOf="@+id/following_text" />

                <TextView
                    android:id="@+id/tv_item_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/followers_text"
                    app:layout_constraintStart_toStartOf="@+id/followers_text"
                    app:layout_constraintTop_toBottomOf="@+id/followers_text" />

                <TextView
                    android:id="@+id/repository_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/user_repository"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/following_text"
                    app:layout_constraintTop_toTopOf="@+id/following_text" />

                <TextView
                    android:id="@+id/tv_item_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/repository_text"
                    app:layout_constraintStart_toStartOf="@+id/repository_text"
                    app:layout_constraintTop_toBottomOf="@+id/repository_text" />

                <TextView
                    android:id="@+id/tv_item_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/user_username"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_followers" />

                <TextView
                    android:id="@+id/tv_item_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="6dp"
                    android:text="@string/user_company"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_business_24"
                    app:drawableTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

                <TextView
                    android:id="@+id/tv_item_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="6dp"
                    android:text="@string/user_location"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                    app:drawableTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_company" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/Theme.GithubUserApp.tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ToggleButton
        android:id="@+id/tb_favorite"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:background="@drawable/toggle_favorite"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn="" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>